# JCNativesTest

NativeCore/: CMakeLists.txt
NativeCore/Sources/Core/Graphics/: GraphicsManager.h
NativeCore/Sources/Core/Graphics/API/: Base.h
NativeCore/Sources/Core/Logging/: Log.cpp  Log.h
NativeCore/Sources/Core/Main/: Core.h  CoreTest.cpp  CoreTest.h
NativeCore/Sources/Core/Memory/: MemoryManager.cpp  MemoryManager.h  Utils.h  sg_frame_ptr.h  sg_global_ptr.h
NativeCore/Sources/Core/Memory/Allocators/: FrameAllocator.h  (+2 more)
NativeCore/libs/glfw/: CMakeLists.txt
NativeTest/: build.gradle.kts  settings.gradle.kts
NativeTest/gradle/wrapper/: gradle-wrapper.properties
NativeTest01/: build.gradle
NativeTest01/src/: Main.java
NativeTest02/: build.gradle  settings.gradle
NativeTest02/gradle/wrapper/: gradle-wrapper.properties
NativeTest02/src/hello/c/: hello.c
NativeTest02/src/main/java/: Main.java
NativeTest03/: build.gradle  org_example_Main.h  org_example_Main_PoolAllocator.h  org_example_Main_Vector3f.h  org_example_NativeControl.h  settings.gradle
NativeTest03/gradle/wrapper/: gradle-wrapper.properties
test00/: CMakeLists.txt  JNativeControl.h  JPoolAllocator.h  JVector3f.h  java_methods.h  library.cpp  library.h
test00/Sources/ECS/Transformations/: TransformComponent.cpp  TransformComponent.h
test00/Sources/Memory/: MemoryManager.h  sg_global_ptr.h
test00/Sources/Memory/Allocators/: Allocators.h  FrameAllocator.cpp  FrameAllocator.h  IAllocator.cpp  IAllocator.h  PoolAllocator.cpp  PoolAllocator.h
test00/Sources/Utils/: Utils.cpp  Utils.h
(+8 files in other folders)
